# customminds-ai-onboarding-chatbot

./: README.md
chat-bot-cm-onboard-backend/: alembic.ini  hello.py  pyproject.toml
chat-bot-cm-onboard-backend/alembic/: env.py
chat-bot-cm-onboard-backend/alembic/versions/: 2d60ec1df999_create_new_chat_messag_tables.py  459f8b733bcc_create_new_chat_message.py  4b05866bf309_create_chat_message_tables.py  53dde36851de_create_tables.py  66dbd3c9a299_create_db_tables.py  8fc19e236b4c_create_humanreviews_table.py  cd7be75f0aa7_create_new_chat_messag_tables2.py
chat-bot-cm-onboard-backend/app/: main.py
chat-bot-cm-onboard-backend/app/agent/: agent_graph.py  agent_state.py  llm_manager.py
chat-bot-cm-onboard-backend/app/agent/node/: chatbot_node.py  generate_reply.py  greeting_node.py  normal_chat_node.py  tool_caller_node.py
chat-bot-cm-onboard-backend/app/agent/tool/: sql_query_tool.py
chat-bot-cm-onboard-backend/app/ai/: llm_manager.py  query_service.py  sql_agent.py
chat-bot-cm-onboard-backend/app/api/routes/: chat.py  session.py
chat-bot-cm-onboard-backend/app/core/: config.py  database.py
chat-bot-cm-onboard-backend/app/models/: __init__.py  chat_message.py  customers.py  doctors.py  employees.py  human_reviews.py  pharmacy_inventory.py  prescriptions.py  purchase_details.py  purchases.py  sales.py  sales_details.py  session.py  suppliers.py
chat-bot-cm-onboard-backend/app/schemas/: chat_schema.py
chat-bot-cm-onboard-backend/app/services/: chatbot_service.py  session_services.py
chat-bot-cm-onboard-frontend/chatbot-frontend/: package-lock.json  (+2 more)
(+2 files in other folders)
